# ChangeLog for dev-perl/Perl-Critic
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-perl/Perl-Critic/ChangeLog,v 1.86 2012/06/24 13:00:11 tove Exp $

  24 Jun 2012; Torsten Veller <tove@gentoo.org> metadata.xml:
  Update CPAN upstream info

  03 Jun 2012; Torsten Veller <tove@gentoo.org> -Perl-Critic-1.106.ebuild,
  -Perl-Critic-1.111.ebuild, -Perl-Critic-1.116.0.ebuild:
  Cleanup

  22 May 2012; Johannes Huber <johu@gentoo.org> Perl-Critic-1.117.0.ebuild:
  Stable for x86, wrt bug #412963

  26 Apr 2012; Agostino Sarubbo <ago@gentoo.org> Perl-Critic-1.117.0.ebuild:
  Stable for amd64, wrt bug #412963

  24 Mar 2012; Raúl Porcel <armin76@gentoo.org> Perl-Critic-1.106.ebuild,
  Perl-Critic-1.111.ebuild, Perl-Critic-1.116.0.ebuild,
  Perl-Critic-1.117.0.ebuild:
  Drop sparc keywords

*Perl-Critic-1.117.0 (25 Dec 2011)

  25 Dec 2011; Torsten Veller <tove@gentoo.org> +Perl-Critic-1.117.0.ebuild:
  Version bump

  06 Nov 2011; Fabian Groffen <grobian@gentoo.org> Perl-Critic-1.116.0.ebuild:
  Add dropped Prefix keywords, bug #355385

  06 Nov 2011; Raúl Porcel <armin76@gentoo.org> Perl-Critic-1.116.0.ebuild:
  Add ~sparc wrt #355385

  29 Jul 2011; Torsten Veller <tove@gentoo.org> -Perl-Critic-1.109.ebuild,
  -Perl-Critic-1.113.ebuild, -Perl-Critic-1.114.0.ebuild,
  -Perl-Critic-1.115.0.ebuild:
  Cleanup

*Perl-Critic-1.116.0 (16 May 2011)

  16 May 2011; Torsten Veller <tove@gentoo.org> +Perl-Critic-1.116.0.ebuild:
  Version bump

*Perl-Critic-1.115.0 (01 Apr 2011)

  01 Apr 2011; Torsten Veller <tove@gentoo.org> +Perl-Critic-1.115.0.ebuild:
  Version bump

*Perl-Critic-1.114.0 (27 Mar 2011)

  27 Mar 2011; Torsten Veller <tove@gentoo.org> +Perl-Critic-1.114.0.ebuild:
  Version bump

  18 Mar 2011; Thomas Kahle <tomka@gentoo.org> Perl-Critic-1.111.ebuild:
  x86 stable per bug 352842

  20 Feb 2011; Kacper Kowalik <xarthisius@gentoo.org>
  Perl-Critic-1.113.ebuild:
  Marked ~ppc wrt #355385
