@@ -1,6 +1,12 @@
 # ChangeLog for dev-perl/Perl-Critic
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/Perl-Critic/ChangeLog,v 1.86 2012/06/24 13:00:11 tove Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/Perl-Critic/ChangeLog,v 1.87 2012/07/13 17:27:19 tove Exp $
+
+*Perl-Critic-1.118.0 (13 Jul 2012)
+
+  13 Jul 2012; Torsten Veller <tove@gentoo.org> +Perl-Critic-1.118.0.ebuild,
+  metadata.xml:
+  Version bump
 
   24 Jun 2012; Torsten Veller <tove@gentoo.org> metadata.xml:
   Update CPAN upstream info
